@@ -1,3 +1,10 @@
+2012-04-08  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* datalog.c (dl_pcall, dl_lua): Removed DATALOG_DEBUG, and now
+	always print the error message returned from Lua.  This message is
+	very useful now that its so easy to add primitives using the -l
+	option.
+
 2012-04-07  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* git: Tagged as datalog-2.0 with tag v2.0.
